styles.css
/* Fonts */

@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,500;0,700;1,500&display=swap');

/* Site Wide Colour Options */
:root {
    --primary-color: #059669;
    --white-color: white;
    --ice-blue-color: #D6DFEB;
    --light-green-color: #DCEBE4;
    --cream-color: #FEF3C7;
    --emerald-green: #34D399;
    --dark-grey-color: #374151;
}


/* Site Wide Body Formatting */
body {
    font-family: 'Ubuntu',
        sans-serif;
    margin: 0px;

}


/* H headings formatting */

h1 {
    color: var(--emerald-green);
}

h2 {
    color: var(--primary-color);
}


/* Section Break Formatting */

hr {
    margin-top: 2rem;
    margin-bottom: 2rem;
}


/* Container Formatting */
.containers {
    padding-left: 2.5rem;
    padding-right: 2.5rem;
    padding-bottom: 1.5rem;
    max-width: 600px;
    margin: auto;
}

.fluid-containers {
    padding-left: 2rem;
    padding-right: 2rem;
}


/* Links-Button Formatting */
.link-primary-btn {
    display: block;
    margin-top: 2rem;
    text-decoration: none;
    background-color: var(--dark-grey-color);
    border-radius: 0.5rem;
    padding: 0.5rem 1.5rem;
    color: var(--white-color);
}

.link-secondary-btn {
    display: block;
    margin-left: 20rem;
    text-align: center;
    text-decoration: none;
    border: 2px solid var(--dark-grey-color);
    border-radius: 0.25rem;
    padding: 0.5rem 1.5rem;
    color: var(--dark-grey-color);
}

.remove-hyperlink-formatting {
    text-decoration: none;
    color: var(--white-color)
}


/* List Formatting */
.list-no-bullets {
    list-style: none;
}

.list-inline {
    display: inline;
    padding: 1rem 0.25rem;
}

.list-right-side {
    text-align: right;
}

.list-center-side {
    text-align: center;
    padding-inline-start: 0px;
}

.list-padding {
    padding-top: 0.5rem;
    padding-bottom: 0.5rem;
}


/* Navigation Bar Formatting */
.navigation {
    background-color: var(--dark-grey-color);
    padding: 2rem 1.5rem;
    border-bottom-right-radius: 1rem;
}

.nav-brand {
    font-weight: bold;
    font-size: 2.25rem;
    color: var(--white-color);
}

.navigation .link {
    text-decoration: none;
    color: var(--white-color);
    padding: 0rem 0.35rem;
}

.navigation .link-active {
    font-weight: bolder;
}

/* Header Formatting */
.hero {
    padding-top: 2rem;
    padding-bottom: 0rem;
}

.hero .hero-img {
    min-width: none;
    max-width: 100%;
    max-height: 100vh;
    display: block;
    margin: auto;
}

.hero .hero-caption {
    text-align: center;
    font-size: 2rem;
}

.hero .hero-caption .hero-highlight {
    color: var(--primary-color);
}


/* Section Formatting */
section {
    margin: 2rem;
    padding: 0.5rem 1rem;
}


/* Section Backgrounds */
.off-white-bg {
    background-color: var(--ice-blue-color);
    border-radius: 0.5rem;
    margin: 2rem auto;
}

.light-green-bg {
    background-color: var(--light-green-color);
    border-radius: 0.5rem;
    margin: 2rem auto;
}

.cream-bg {
    background-color: var(--cream-color);
    border-radius: 0.5rem;
    margin: 2rem auto;
}


/* Footer Formatting */
.footer-heading {
    font-size: 1.25rem;
}

.footer-box {
    background-color: var(--dark-grey-color);
    border-radius: 0.5rem 0rem 0.5rem 0rem;
    color: var(--white-color);
    padding: 0.5rem 1rem;
    text-align: center;
}

.footer-note {
    color: var(--ice-blue-color);
    text-align: center;
    font-size: smaller;
}


/* Misc */

/* a,
a:visited,
a:hover,
a:active {
    color: inherit;
} */

